--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -85,13 +85,13 @@
         <section class='box-section'>
   			  <h1>Partnerships</h1>
   			  <p>
-  			  	LPI Italia, attraverso i suoi programmi di partnership, mette in relazione i soggetti legati al mondo del lavoro in ambito<br> Linux e FOSS (Free ed Open Source Software).<br /><br>
-            Con il programma dedicato alla Formazione intendiamo dare una risposta ai professionisti che vogliono ottenere<br> una certificazione professionale in ambito Linux.<br /><br>
-            Con il programma dedicato a Servizi e Soluzioni intendiamo soddisfare la richiesta di aziende e professionisti<br> nella ricerca di consulenti competenti su Linux ed Open Source.
+  			  	LPI Italia, attraverso i suoi programmi di partnership, mette in relazione i soggetti legati al mondo del lavoro in ambito Linux e FOSS (Free ed Open Source Software).<br /><br>
+            Con il programma dedicato alla Formazione intendiamo dare una risposta ai professionisti che vogliono ottenere una certificazione professionale in ambito Linux.<br /><br>
+            Con il programma dedicato a Servizi e Soluzioni intendiamo soddisfare la richiesta di aziende e professionisti nella ricerca di consulenti competenti su Linux ed Open Source.
   			  </p>
         </section>
 
-  			<section class='prtn-box-container'>
+  			<section class='prtn-box-container prtn-box-index'>
 			 	  <section class='prtn-box col-sm-4' data-bind='css: box_left_show'>
 			 	  	<div class='prtn-box-inner'>
 				 	  	<h3>Formazione</h3>
