--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -140,44 +140,49 @@
   <div class="row">
   <h1>Docenti</h1>
   <p>
-  In questa sezione puoi trovare i nostri programmi di partnership dedicati al ai professionisti che intendo certificarsi LPI e <br>prestare servizio come insegnati nei corsi LPI.<br />
+  In questa sezione puoi trovare i nostri programmi di partnership dedicati al ai professionisti che intendo certificarsi LPI e prestare servizio come insegnati nei corsi LPI.<br />
   </p>
   </div>
 
   <div class="row">
   <ul class='prtn-box-container'>
-    <li class='prtn-box col-sm-3 prtn-box-1 col-sm-offset-3'>
+    <li class='prtn-box col-sm-12 prtm-box-ct'>
       <div class='prtn-box-inner prtn-box-teachers'>
-        <h3>Certified Trainer</h3>
-        <div class='prtn-box-icon'>
-          <img src='{% static "lpi/lpi-ct.png" %}'>
-        </div>
-        <div class='prtn-box-price'>
-          50 &euro;/anno<br>
-          IL PRIMO ANNO &Egrave; GRATUITO!
-        </div>
+        <div class='col-sm-6'>
+          <h3>Certified Trainer</h3>
+          <div class='prtn-box-icon'>
+            <img src='{% static "lpi/lpi-ct.png" %}'>
+          </div>
+          <div class='prtn-box-price'>
+            50 &euro;/anno<br>
+            IL PRIMO ANNO &Egrave; GRATUITO!
+          </div>
 
-        <div class='prtn-box-desc'>
+        </div>
+        <div class='col-sm-6'>
 
-        <p>
+          <div class='prtn-box-desc'>
+
+          <p>
         LPI CP (Certified Trainer) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).<br>
-        </div>
-        <h4>Benefit</h4>
-        <ul class='prtn-box-bonus-list'>
+          </div>
+          <h4>Benefit</h4>
+          <ul class='prtn-box-bonus-list'>
             <li>Disponibilita' utilizzo logo LPI</li>
             <li>Posizionamento nel portale LPI</li>
-        </ul>
-        <br />
-        <h4>Requisiti</h4>
-        <ul class='prtn-box-bonus-list'>
-            <li>Fornitura servizi FOSS</li>
-            <li>Almeno 1 collaboratore certificato Linux Essentials</li>
-        </ul>
+          </ul>
+          <br />
+          <h4>Requisiti</h4>
+          <ul class='prtn-box-bonus-list'>
+              <li>Fornitura servizi FOSS</li>
+              <li>Almeno 1 collaboratore certificato Linux Essentials</li>
+          </ul>
 
-        </p>
+          </p>
+        </div>
 
         <div class='prtn-box-button-cont'>
-          <a href="#signup/lpi-ct" class="button">Aderisci ora</a>
+          <a href="#signup/lpi-ct" class="button pull-right">Aderisci ora</a>
         </div>
         
       </div>
@@ -293,7 +298,7 @@
       <div class='prtn-box-inner prtn-box-training' style='height:1050px'>
         <h3>Linux Essentials Approved Training Partner</h3>
         <div class='prtn-box-icon'>
-          <img src='{% static "lpi/lpi-atp.png" %}'>
+          <img src='{% static "lpi/lpi-atp-le.png" %}'>
         </div>
         <div class='prtn-box-price'>
         250  &euro;/anno
