--- a/partners/templates/joinus.html
+++ b/partners/templates/joinus.html
@@ -1,5 +1,5 @@
 <div class="row">
-<section class=''>
+<section class='box-section'>
   <h1>Scegli la tua partnership</h1>
   <p>
  Partecipa ai nostri programmi di partnership, un modo per ottenere visibilit&agrave; e garantire le tue competenze. Attraverso le nostre partnership puoi fornire servizi professionali nel settore che più ti compete e garantire la qualità della tua formazione in aula. 
