--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -137,12 +137,12 @@
 </div>
 
 <div data-bind='visible: type() == "personal-teacher" && show'>
-  <div class="row">
-  <h1>Docenti</h1>
-  <p>
-  In questa sezione puoi trovare i nostri programmi di partnership dedicati al ai professionisti che intendo certificarsi LPI e prestare servizio come insegnati nei corsi LPI.<br />
-  </p>
-  </div>
+  <section class='box-section'>
+    <h1>Docenti</h1>
+    <p>
+    In questa sezione puoi trovare i nostri programmi di partnership dedicati al ai professionisti che intendo certificarsi LPI e prestare servizio come insegnati nei corsi LPI.<br />
+    </p>
+  </section>
 
   <div class="row">
   <ul class='prtn-box-container'>
@@ -195,12 +195,12 @@
 </div>
 
 <div data-bind='visible: type() == "test-center" && show'>
-  <div class="row">
-  <h1>Test center</h1>
-  <p>
-  In questa sezione puoi trovare i nostri programmi di partnership dedicati al ai professionisti che intendo certificarsi LPI e <br>prestare servizio come insegnati nei corsi LPI.<br />
-  </p>
-  </div>
+  <section class="box-section">
+    <h1>Test center</h1>
+    <p>
+    In questa sezione puoi trovare i nostri programmi di partnership dedicati al ai professionisti che intendo certificarsi LPI e prestare servizio come insegnati nei corsi LPI.<br />
+    </p>
+  </section>
 
   <div class="row">
   <ul class='prtn-box-container'>
@@ -283,13 +283,14 @@
 </div>
 
 <div data-bind='visible: type() == "training-company" && show'>
-  <div class="row">               
+  <section class="box-section">
   <h1>Formazione per aziende</h1>
-  <p>
-  Il programma di partnership &egrave; dedicato alle aziende che intendono offrire Corsi Linux certificati LPI.<br />
-  La suddivisione avviene per il grado di certificazione che è possibile insegnare, LPI ATP LE e LPI ATP PRO.
-  </p>
-  </div>
+    <p>
+    Il programma di partnership &egrave; dedicato alle aziende che intendono offrire Corsi Linux certificati LPI.<br />
+    La suddivisione avviene per il grado di certificazione che è possibile insegnare, LPI ATP LE e LPI ATP PRO.
+    </p>
+  </section>
+  
 
   <div class="row">
 
@@ -378,13 +379,14 @@
 </div>
 
 <div data-bind='visible: type() == "training-academy" && show'>
-  <div class="row">
-  <h1>Formazione per scuole, universit&agrave;</h1>
-  <p>
-  Il programma di partnership per scuole ed universit&agrave; che intendono offrire formazione certificata LPI.<br />
-  La suddivisione avviene per il grado di certificazione che è possibile insegnare, LPI AAP LE e LPI AAP PRO.
-  </p>
-  </div>
+  <section class="box-section">
+    <h1>Formazione per scuole, universit&agrave;</h1>
+    <p>
+    Il programma di partnership per scuole ed universit&agrave; che intendono offrire formazione certificata LPI.<br />
+    La suddivisione avviene per il grado di certificazione che è possibile insegnare, LPI AAP LE e LPI AAP PRO.
+    </p>
+  </section>
+  
 
   <h3>LPI Academic Partners</h3>
 
@@ -549,3 +551,4 @@
     </ul>
   </div>
 </div>
+s
