--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -85,7 +85,7 @@
         <section class='box-section'>
   			  <h1>Partnerships</h1>
   			  <p>
-  			  	LPI Italia, attraverso i suoi programmi di partnership, mette in relazione i soggetti legati al mondo del lavoro in ambito Linux e FOSS (Free ed Open Source Software).<br /><br>
+  			  	LPI Italia, attraverso i suoi programmi di partnership, mette in relazione i soggetti legati al mondo del lavoro in ambito Linux e FLOSS (Free, Libre and Open Source Software).<br /><br>
             Con il programma dedicato alla Formazione intendiamo dare una risposta ai professionisti che vogliono ottenere una certificazione professionale in ambito Linux.<br /><br>
             Con il programma dedicato a Servizi e Soluzioni intendiamo soddisfare la richiesta di aziende e professionisti nella ricerca di consulenti competenti su Linux ed Open Source.
   			  </p>
@@ -191,7 +191,10 @@
         <li><a href="http://nuovo.lpi-italia.org/news">News</a></li>
         <li><a href="http://nuovo.lpi-italia.org/chi-siamo">About</a></li>
         <li><a href="http://nuovo.lpi-italia.org/contatti">Contatti</a></li>
-        <li><a href="http://nuovo.lpi-italia.org/privacy">Privacy</a></li>        
+        <li><a href="http://nuovo.lpi-italia.org/privacy">Privacy</a></li>  
+        <li><a href="http://nuovo.lpi-italia.org/termini-di-servizio#refund-policy" 
+               alt='Refund policy' title='Refund policy'>Condizioni di vendita</a></li>        
+        <li><a href="http://nuovo.lpi-italia.org/termini-di-servizio">Termini di servizio</a></li>       
       </ul>
 
       <div class="copyright">
@@ -213,6 +216,7 @@
   <script type='text/javascript' src='{% static "js/vendor/knockout.js/knockout.mapping.js" %}'></script>
   <script type='text/javascript' src='{% static "js/vendor/radio.min.js" %}'></script>
   <script type='text/javascript' src='{% static "js/vendor/class.js" %}'></script>
+  <script type='text/javascript' src='{% static "js/vendor/pace.min.js" %}'></script>
 
   <script type='text/javascript' src='{% static "js/viewmodels/base.js" %}'></script>
   <script type='text/javascript' src='{% static "js/viewmodels/companies.js" %}'></script>
