--- a/partners/templates/joinus.html
+++ b/partners/templates/joinus.html
@@ -21,7 +21,7 @@
 <div class="row joinus-box-container">
 <br><br>
 <ul class='row'>
-    <li class='prtn-box col-sm-6'>
+    <li class='prtn-box col-sm-6 atp-joinus'>
       <div class='prtn-box-inner'>
         <h4>Approved Training Partner (LPI ATP)</h4>
         <p>
@@ -33,7 +33,7 @@
       </div>
     </li>
 
-    <li class='prtn-box col-sm-6'>
+    <li class='prtn-box col-sm-6 aap-joinus'>
       <div class='prtn-box-inner'>
         <h4>Approved Academic Partner (LPI AAP)</h4>
         <p>
@@ -50,10 +50,9 @@
   </ul>
   <ul class='prtn-box-container row'>
 
-
-    <li class='prtn-box col-sm-6'>
+    <li class='prtn-box col-sm-6 csp-joinus'>
       <div class='prtn-box-inner'>
-        <h4>Offerte per le societ&agrave; di servizi (LPI CSP)</h4>
+        <h4>Proposte per le societ&agrave; di servizi (LPI CSP)</h4>
         <p>
           Il programma di certificazione di Servizi e Soluzioni &egrave; dedicata ad 
           aziende e professionisti. Con un controllo da parte del nostro staff e le 
@@ -63,12 +62,12 @@
            <a href='http://nuovo.lpi-italia.org/faq/'>Domande frequenti</a>
         <div class='prtn-box-button-offers'>
            <a class='button' href='#offers/service-company'>
-              Offerta Servizi e Soluzioni per aziende</a>
+              Offerta Servizi e Soluzioni</a>
         </div>
       </div>
     </li>
 
-    <li class='prtn-box col-sm-6'>
+    <li class='prtn-box col-sm-6 ct-joinus'>
       <div class='prtn-box-inner'>
         <h4>Certified Trainer (LPI CT)</h4>
         <p>
@@ -83,46 +82,7 @@
   </ul>
   
   </div>
-  <div class='row'>
-  <div data-bind='visible: details() == "training"' 
-       class='training_details col-sm-10 col-sm-offset-1 prtn-details-box'>
-       <div class='prtn-details-indicator'>
-       </div>
-       <h3>Offerte per la formazione</h3>
-       <p class='col-sm-6'>
-       Il programma per la formazione LPI si suddivide in ATP (Approved Training Partner) dedicato ad aziende, agenzie formative, associazione, Pubbliche Amministrazioni, organizzazioni e AAP (Approved Academic Partner) dedicato a scuole ed universit&agrave;.
-       </p>
-
-       <p class='col-sm-6 '>
-          <a href='#offers/training-company'>Programma per le aziende</a ><br><br>
-
-          <a href="#offers/training-academy">
-            Programma per le scuole e universit&agrave;
-          </a><br><br>
-
-          <a href="#offers/personal-teacher">Programma per i professionisti</a>
-       </p>
-
-
-  </div>
-  </div>
-
-  <div class="row">
-
-  <div data-bind='visible: details() == "companies"'
-       class='companies_details col-sm-10 col-sm-offset-1 prtn-details-box '>
-       <div class='prtn-details-indicator '>
-       </div>
-       <h3>Offerte per le societa' di servizi</h3>
-       <p class='col-sm-6'>
-       Il programma di certificazione di Servizi e Soluzioni &egrave; dedicata ad aziende e professionisti. Con un controllo da parte del nostro staff e le recensioni dei tuoi clienti, puoi dimostrare la tua competenza, esperienza e professionalità a nuovi potenziali clienti.
-       </p>
-       <p class='col-sm-6'>
-           <a href='#offers/service-company'>vai all'offerta per le aziende</a><br /><br />
-           <a href='http://nuovo.lpi-italia.org/faq/'>Domande frequenti</a><br /><br />
-
-       </p>
-  </div>
+  
 </div>
 
   <div style='clear:both'></div> <!-- end boxes -->
