--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -14,15 +14,22 @@
   <div class="row">
   <ul class='prtn-box-container'>
     <li class='prtn-box col-sm-3 prtn-box-3'>
-      <div class='prtn-box-inner prtn-box-services'>
+      <div class='prtn-box-inner prtn-box-services prtn-box-services-sp'>
+        
+        <div class="ribbon-wrapper-green"><div class="ribbon-green animated">Primo anno GRATUITO</div></div>
+        
         <h3>Service Provider</h3>
         <div class='prtn-box-icon'>
           <img src='{% static "lpi/lpi-sp.png" %}'>
         </div>
         <div class='prtn-box-price'>
-          GRATUITO
+          50 &euro;/anno
         </div>
 
+        <div class='prtn-box-taxes'>
+          IVA esclusa
+        </div>
+        
         <div class='prtn-box-desc'>
 
         <p>
@@ -39,7 +46,7 @@
         <h4>Requisiti</h4>
         <ul>
             <li>Riconoscersi nel Codice Etico</li>
-            <li>Offrire Consulenze, Servizi e/o Soluzioni con tecnologie FOSS</li>
+            <li>Offrire Consulenze, Servizi e/o Soluzioni con tecnologie basate su Software Libero</li>
         </ul>
 
         <div class='prtn-box-button-cont'>
@@ -59,6 +66,9 @@
         <div class='prtn-box-price'>
           250  &euro;/anno
         </div>
+        <div class='prtn-box-taxes'>
+          IVA esclusa
+        </div>
         <div class='prtn-box-desc'>
         <p>
           LPI CSP (Certified Solution Provider) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).<br />
@@ -77,7 +87,7 @@
         <h4>Requisiti</h4>
         <ul>
           <li>Riconoscersi nel Codice Etico</li>
-          <li>Offrire Consulenze, Servizi e/o Soluzioni con tecnologie FOSS</li>
+          <li>Offrire Consulenze, Servizi e/o Soluzioni con tecnologie basate su Software Libero</li>
         </ul>
 
         <div class='prtn-box-button-cont'>
@@ -96,6 +106,9 @@
         <div class='prtn-box-price'>
           650  &euro;/anno
         </div>
+        <div class='prtn-box-taxes'>
+          IVA esclusa
+        </div>
 
         <div class='prtn-box-desc'>
           <p>
@@ -112,13 +125,13 @@
             <li>4 Post sulla pagina FaceBook di LPI Italia</li>
             <li>2 articoli/anno nella  newsletter  di LPI Italia</li>
             <li>Presenza a SMAU Milano: distribuzione materiali e inviti VIP</li>
-            <li>Accesso ai servizi di Assistenza tecnica H24 su tecnologie FOSS*</li>
+            <li>Accesso ai servizi di Assistenza tecnica H24 su tecnologie Software Libero*</li>
           </ul>
           <br />
           <h4>Requisiti</h4>
           <ul>
             <li>Riconoscersi nel Codice Etico</li>
-            <li>Offrire Consulenze, Servizi e/o Soluzioni con tecnologie FOSS</li>
+            <li>Offrire Consulenze, Servizi e/o Soluzioni con tecnologie basate su Software Libero</li>
           </ul>
         </div>
         
@@ -157,6 +170,9 @@
             50 &euro;/anno<br>
             IL PRIMO ANNO &Egrave; GRATUITO!
           </div>
+          <div class='prtn-box-taxes'>
+            IVA esclusa
+          </div>
 
         </div>
         <div class='col-sm-6'>
@@ -164,7 +180,10 @@
           <div class='prtn-box-desc'>
 
           <p>
-        LPI CP (Certified Trainer) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).<br>
+        LPI CP (Certified Trainer) &egrave; il programma di partnership che ti permette di mostrare i servizi offerti legati a Linux e all'Open Source (es: installazione e configurazione CMS, amministrazione di sistema Linux, sviluppo e personalizzazione software).<br><br>
+        <b>L'accesso al database docenti certificati &egrave; riservato ai Partenr LPI.</b>
+
+      </p>
           </div>
           <h4>Benefit</h4>
           <ul class='prtn-box-bonus-list'>
@@ -174,7 +193,7 @@
           <br />
           <h4>Requisiti</h4>
           <ul class='prtn-box-bonus-list'>
-              <li>Fornitura servizi FOSS</li>
+              <li>Fornitura servizi basati su Softaware Libero</li>
               <li>Almeno 1 collaboratore certificato Linux Essentials</li>
           </ul>
 
@@ -212,6 +231,9 @@
           250 &euro;<br>
           <small>5 esami</small>
 
+        </div>
+        <div class='prtn-box-taxes'>
+          IVA esclusa
         </div>
 
         <div class='prtn-box-desc'>
@@ -304,6 +326,9 @@
         <div class='prtn-box-price'>
         250  &euro;/anno
         </div>
+        <div class='prtn-box-taxes'>
+          IVA esclusa
+        </div>
         <div class='prtn-box-desc'>
           Indicato ad agenzie formative che lavorano con studenti e con un grande pubblico. Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata per chi si avvicina a Linux per iniziare una carriera professionale.
           <br><br>
@@ -342,6 +367,9 @@
         <div class='prtn-box-price'>
           650  &euro;/anno
         </div>
+        <div class='prtn-box-taxes'>
+          IVA esclusa
+        </div>
         <div class='prtn-box-desc'>
           Indicato per aziende, organizzazioni ed agenzie formative che intendono fornire corsi di certificazione professionale su Linux. I corsi che possono essere erogati comprendono Linux Essentials e le certificazioni LPIC-1, LPIC-2 ed LPIC-3.
           <br> <br>
@@ -356,7 +384,7 @@
               <li>Presenza Premium del corso Linux Essentials su piattaforma EMAGISTER</li>
               <li>2 articoli/anno nella  newsletter mensile di LPI Italia</li>
               <li>Presenza a SMAU Milano: distribuzione materiali e inviti VIP</li>
-              <li>Accesso ai servizi di Assistenza tecnica su tecnologie FOSS**</li>
+              <li>Accesso ai servizi di Assistenza tecnica su tecnologie Software Libero**</li>
             </ul>
             
             <h4>Requisiti</h4>
@@ -398,6 +426,9 @@
           <div class='prtn-box-price'>
           250  &euro;/anno
           </div>
+          <div class='prtn-box-taxes'>
+            IVA esclusa
+          </div>
           <div class='prtn-box-desc'>
             Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata studenti che intendono intraprendere una carriera professionale con Linux.
             <h4>Benefit</h4>
@@ -431,6 +462,9 @@
           </div>
           <div class='prtn-box-price'>
           250  &euro;/anno
+          </div>
+          <div class='prtn-box-taxes'>
+            IVA esclusa
           </div>
           <div class='prtn-box-desc'>
             Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione professionale su Linux. I corsi che possono essere erogati comprendono, oltre a Linux Essentials, le certificazioni LPIC-1, LPIC-2 ed LPIC-3.
@@ -470,6 +504,9 @@
           <div class='prtn-box-price'>
           650  &euro;/anno
           </div>
+          <div class='prtn-box-taxes'>
+            IVA esclusa
+          </div>
           <div class='prtn-box-desc'>
             Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata studenti che intendono intraprendere una carriera professionale con Linux.
             <h4>Benefit</h4>
@@ -508,6 +545,9 @@
           </div>
           <div class='prtn-box-price'>
           1.150  &euro;/anno
+          </div>
+          <div class='prtn-box-taxes'>
+            IVA esclusa
           </div>
           <div class='prtn-box-desc'>
             Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata studenti che intendono intraprendere una carriera professionale con Linux.
