--- a/partners/templates/signup.html
+++ b/partners/templates/signup.html
@@ -1193,7 +1193,15 @@ engagements to promote the PARTNER’s agenda
     <div class="checkbox">
       <label>
         <input data-bind='checked: tos_accepted' type="checkbox"> 
-          Ho letto e accetto i Termini di Servizio
+          Ho letto e accetto i 
+          <a href='http://nuovo.lpi-italia.org/termini-di-servizio'>Termini di Servizio</a>.
+      </label>
+    </div>
+    <div class="checkbox">
+      <label>
+        <input data-bind='checked: privacy_accepted' type="checkbox"> 
+          Ho letto e accetto l'informativa sulla 
+          <a href='http://nuovo.lpi-italia.org/privacy'>Privacy</a>.
       </label>
     </div>
     
