--- a/partners/static/css/style.css
+++ b/partners/static/css/style.css
@@ -436,7 +436,13 @@ footer .sitemap a:hover {
   font-size:20px;
   font-weight:bold;
   text-align:center;
-  margin:15px 0px;
+  margin:15px 0px 0px;
+}
+
+.prtn-box-taxes {
+  font-size:13px;
+  font-weight: lighter;
+  text-align:center;
 }
 
 .prtn-box-button-cont {
@@ -516,7 +522,7 @@ table {
 }
 
 .joinus-box-container .prtn-box-inner {
-  min-height:250px;
+  min-height:280px;
   position:relative;
 }
 
@@ -999,4 +1005,82 @@ input[type="color"]:focus,
   .joinus-image {
     display:none;
   }
+}
+
+.pace .pace-progress {
+  background: #29d;
+  position: fixed;
+  z-index: 2000;
+  top: 0;
+  left: 0;
+  height: 2px;
+
+  -webkit-transition: width 1s;
+  -moz-transition: width 1s;
+  -o-transition: width 1s;
+  transition: width 1s;
+}
+
+.pace-inactive {
+  display: none;
+}
+
+
+.ribbon-wrapper-green {
+  width: 100%;
+  height: 110px;
+  overflow: hidden;
+  position: absolute;
+  top: 80px;
+  right: 15px;
+}
+
+.ribbon-green {
+  font: bold 15px Sans-Serif;
+  color: #fff;
+  text-align: center;
+
+  position: relative;
+  padding: 7px 0;
+  left: 15px;
+  top: 10px;
+  width: 220px;
+  background-color: #692630;
+  font-weight:normal;
+  border-radius:5px;
+  margin:0px auto;
+ 
+  -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow:    0px 0px 3px rgba(0,0,0,0.3);
+  box-shadow:         0px 0px 3px rgba(0,0,0,0.3);
+}
+
+
+
+.aap-joinus .prtn-box-inner {
+  background-image:url('../lpi/lpi-aap-pro.png');
+  background-repeat: no-repeat;
+  background-size: 40% auto;
+  background-position: 115% 145%;
+}
+
+.atp-joinus .prtn-box-inner {
+  background-image:url('../lpi/lpi-atp-pro.png');
+  background-repeat: no-repeat;
+  background-size: 40% auto;
+  background-position: 115% 145%;
+}
+
+.csp-joinus .prtn-box-inner {
+  background-image:url('../lpi/lpi-csp.png');
+  background-repeat: no-repeat;
+  background-size: 40% auto;
+  background-position: 115% 145%;
+}
+
+.ct-joinus .prtn-box-inner {
+  background-image:url('../lpi/lpi-ct.png');
+  background-repeat: no-repeat;
+  background-size: 40% auto;
+  background-position: 115% 145%;
 }
