--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -200,6 +200,12 @@
       <div class="copyright">
         © 1999-2014 Linux Professional Institute Italia.
       </div>
+
+      <div class='legal_contact'>
+        LPI - Linux Professional Institute © LiCI - Master Affiliate for Italy PI: 05188780489, Contact center offerto da <a href='http://www.metamarketing.it'>Metamarketing</a> numero verde: 800-910354 e-mail: info @ lpi-italia.org 
+        <a href='http://nuovo.lpi-italia.org/contatti/'>Contatti</a>
+      </div>
+      
     </div>
   </footer>
 
