--- a/partners/static/css/style.css
+++ b/partners/static/css/style.css
@@ -321,6 +321,15 @@ footer .copyright {
   color: rgb(153, 153, 153);
 }
 
+footer .legal_contact {
+  width:100%;
+  margin-top: 20px;
+  font-size: 10px;
+  color: #999;
+  text-align: center;
+}
+
+
 footer .sitemap {
   float:right;
   margin-right:;
