--- a/partners/templates/index.html
+++ b/partners/templates/index.html
@@ -205,6 +205,18 @@
         LPI - Linux Professional Institute © LiCI - Master Affiliate for Italy PI: 05188780489, Contact center offerto da <a href='http://www.metamarketing.it'>Metamarketing</a> numero verde: 800-910354 e-mail: info @ lpi-italia.org 
         <a href='http://nuovo.lpi-italia.org/contatti/'>Contatti</a>
       </div>
+
+
+      <div class='legal_contact' style='margin-top:5px;'>
+      Ragione Sociale: METASSISTANT SRL
+      Sede Legale: Piazza Savonarola, 10 - 50132 Firenze
+      CF/PI: 05188780489
+      Telefono: 055 2340656
+      Fax: 055 3909078
+      Cod REA: 527418 - Firenze
+      Capitale Sociale € 15.000,00 i.v.
+      PEC: METASSISTANT@PEC.METACERT.IT
+      </div>
       
     </div>
   </footer>
